[COLOR="DeepSkyBlue"]2.0.2[/COLOR] Changes:
[LIST]
[*] Fixed minor bug in Bag Export.
[*] Fixed bug in type() and sptype() where it was ignoring any arguments after the first one.
[/LIST]

[COLOR="DeepSkyBlue"]2.0.1[/COLOR] Changes:
[LIST]
[*] Fixed loading bug in integration for SetTracker, TTC, and Master Merchant.
[/LIST]

[COLOR="DeepSkyBlue"]2.0[/COLOR] Changes:
[COLOR="MediumSlateBlue"]Breaking Changes[/COLOR]
[LIST]
[*] [COLOR="DarkOrange"]Now requires the libraries LibSFUtils, LibAddonMenu-2.0, and LibMediaProvider-1.0 to be installed separately.[/COLOR]
[*] The SavedVariables for version 2.0 have changed formats from 1.37 in order to support multiple servers and character name changing. [COLOR="DarkOrange"]This means that 2.0 will not be able to read in your 1.37 category definitions.[/COLOR] I recommend that you move your live\SavedVariables\AutoCategory.lua somewhere else (or print it) so that you can refer to your old rules to enter them back into the new AutoCategory.
[/LIST]

[COLOR="MediumSlateBlue"]Bug Fixes[/COLOR]
[LIST]
[*] Fixed error that prevented AutoCategory from working with the Quality Sort addon. (Thanks to Silvereyes for the corrected code.)
[*] Included in the patch for Inventory Grid View integration by Provision to properly display the default icons for Ornate, Intricate, Research, etc. on the grid cells instead of next to them.
[/LIST]

[COLOR="MediumSlateBlue"]Enhancements[/COLOR]
[LIST]
[*] Elsweyr support.
[*] Changed the AutoCategory settings page to try to make it easier to understand and use.
[*] NEW: Added a "Check" button to the Add Category section so that you can test to see that your rule will compile properly when you write it. If it does not compile correctly, the area to the left of the Check button will show an error message to try to tell you what was wrong with it.